--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">Location Around You</string>
-    <string name="title_activity_maps">Location Around You</string>
+    <string name="app_name">LAY!</string>
+    <string name="title_activity_maps">LAY!</string>
     <string name="google_maps_key">AIzaSyBqo4GrmrWgtGKx7n8823LAsABjmqJcnJ0</string>
     <string name="passwort">Passport</string>
     <string name="google_app_id">crack-map-143514</string>
